force-app/main/default/objects/sbaa__Approver__c/fields/sbaa__DelegatedApprover__c.field-meta.xml
<CustomField>
        <fullName>sbaa__DelegatedApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used with Delegated Approvals, lookup to the Approver who is the delegate for this Approver</description>
        <inlineHelpText>Used with Delegated Approvals, lookup to the Approver who is the delegate for this Approver</inlineHelpText>
        <label>Delegated Approver</label>
        <referenceTo>sbaa__Approver__c</referenceTo>
        <relationshipLabel>Delegating Approvers</relationshipLabel>
        <relationshipName>DelegatingApprovers</relationshipName>
        <type>Lookup</type>
    </CustomField>