force-app/main/default/objects/sbaa__Approver__c/fields/sbaa__DelegationStart__c.field-meta.xml
<CustomField>
        <fullName>sbaa__DelegationStart__c</fullName>
        <description>Approval delegations start on the beginning of this date</description>
        <inlineHelpText>Approval delegations start on the beginning of this date</inlineHelpText>
        <label>Delegation Start</label>
        <type>Date</type>
    </CustomField>