force-app/main/default/objects/sbaa__Approver__c/fields/sbaa__GroupId__c.field-meta.xml
<CustomField>
        <fullName>sbaa__GroupId__c</fullName>
        <description>If Approver is a Group instead of a single User, populate with the Group ID</description>
        <inlineHelpText>If Approver is a Group instead of a single User, populate with the Group ID</inlineHelpText>
        <label>Group ID</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>