force-app/main/default/objects/sbaa__Approver__c/fields/sbaa__NextApprover__c.field-meta.xml
<CustomField>
        <fullName>sbaa__NextApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approver that needs to approve after this Approver approves</description>
        <inlineHelpText>Approver that needs to approve after this Approver approves</inlineHelpText>
        <label>Next Approver</label>
        <referenceTo>sbaa__Approver__c</referenceTo>
        <relationshipLabel>Approvers</relationshipLabel>
        <relationshipName>Approvers</relationshipName>
        <type>Lookup</type>
    </CustomField>