force-app/main/default/objects/sbaa__Approver__c/fields/sbaa__Unanimous__c.field-meta.xml
<CustomField>
        <fullName>sbaa__Unanimous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Approver is a Group, checked if all members need to Approve in order to consider the Approval approved</description>
        <inlineHelpText>If Approver is a Group, checked if all members need to Approve in order to consider the Approval approved</inlineHelpText>
        <label>Unanimous</label>
        <type>Checkbox</type>
    </CustomField>