force-app/main/default/objects/sbaa__Approver__c/listViews/sbaa__All.listView-meta.xml
<ListView>
        <fullName>sbaa__All</fullName>
        <columns>NAME</columns>
        <columns>sbaa__User__c</columns>
        <columns>sbaa__NextApprover__c</columns>
        <columns>sbaa__GroupId__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </ListView>